--- a/Apps/Playground/Android/app/build.gradle
+++ b/Apps/Playground/Android/app/build.gradle
@@ -93,6 +93,36 @@ preBuild.dependsOn ':BabylonNative:assembleRelease'
 task copyFiles {
     copy
     {
+        from '../../../node_modules/babylonjs'
+        include "babylon.max.js"
+        into 'src/main/assets/Scripts'
+    }
+    copy
+    {
+        from '../../../node_modules/babylonjs-loaders'
+        include "babylonjs.loaders.js"
+        into 'src/main/assets/Scripts'
+    }
+    copy
+    {
+        from '../../../node_modules/babylonjs-materials'
+        include "babylonjs.materials.js"
+        into 'src/main/assets/Scripts'
+    }
+    copy
+    {
+        from '../../../node_modules/babylonjs-gui'
+        include "babylon.gui.js"
+        into 'src/main/assets/Scripts'
+    }
+    copy
+    {
+        from '../../../Dependencies'
+        include "*.js"
+        into 'src/main/assets/Scripts'
+    }
+    copy
+    {
         from '../../Scripts'
         include "*.js"
         into 'src/main/assets/Scripts'
