Add NativeEncoding to installation test

--- a/Install/Test/CMakeLists.txt
+++ b/Install/Test/CMakeLists.txt
@@ -162,6 +162,7 @@ target_link_libraries(TestInstall
     NativeInput
     NativeOptimizations
     NativeTracing
+    NativeEncoding
     OGLCompiler
     OSDependent
     ScriptLoader
