--- a/Apps/UnitTests/CMakeLists.txt
+++ b/Apps/UnitTests/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(UnitTests
     PRIVATE Console
     PRIVATE GraphicsDevice
     PRIVATE NativeEngine
+    PRIVATE NativeEncoding
     PRIVATE ScriptLoader
     PRIVATE UrlLib
     PRIVATE Window
