--- a/Polyfills/Canvas/CMakeLists.txt
+++ b/Polyfills/Canvas/CMakeLists.txt
@@ -1,3 +1,181 @@
+# _bn_shaderc_parse(
+	#	FILE filename
+	#	OUTPUT filename
+	#	FRAGMENT|VERTEX|COMPUTE
+	#	ANDROID|ASM_JS|IOS|LINUX|OSX|WINDOWS|ORBIS
+	#	PROFILE profile
+	#	[O 0|1|2|3]
+	#	[VARYINGDEF filename]
+	#	[BIN2C filename]
+	#	[INCLUDES include;include]
+	#	[DEFINES include;include]
+	#	[DEPENDS]
+	#	[PREPROCESS]
+	#	[RAW]
+	#	[VERBOSE]
+	#	[DEBUG]
+	#	[DISASM]
+	#	[WERROR]
+	# )
+function(_bn_shaderc_parse ARG_OUT)
+    cmake_parse_arguments(
+        ARG
+        "DEPENDS;ANDROID;ASM_JS;IOS;LINUX;OSX;WINDOWS;ORBIS;PREPROCESS;RAW;FRAGMENT;VERTEX;COMPUTE;VERBOSE;DEBUG;DISASM;WERROR"
+        "FILE;OUTPUT;VARYINGDEF;BIN2C;PROFILE;O"
+        "INCLUDES;DEFINES"
+        ${ARGN}
+    )
+    set(CLI "")
+
+    # -f
+    if(ARG_FILE)
+        list(APPEND CLI "-f" "${ARG_FILE}")
+    else()
+        message(SEND_ERROR "Call to _bn_shaderc_parse() must have an input file path specified.")
+    endif()
+
+    # -i
+    if(ARG_INCLUDES)
+        foreach(INCLUDE ${ARG_INCLUDES})
+            list(APPEND CLI "-i")
+            list(APPEND CLI "${INCLUDE}")
+        endforeach()
+    endif()
+
+    # -o
+    if(ARG_OUTPUT)
+        list(APPEND CLI "-o" "${ARG_OUTPUT}")
+    else()
+        message(SEND_ERROR "Call to _bn_shaderc_parse() must have an output file path specified.")
+    endif()
+
+    # --bin2c
+    if(ARG_BIN2C)
+        list(APPEND CLI "--bin2c" "${ARG_BIN2C}")
+    endif()
+
+    # --depends
+    if(ARG_DEPENDS)
+        list(APPEND CLI "--depends")
+    endif()
+
+    # --platform
+    set(PLATFORM "")
+    set(PLATFORMS "ANDROID;ASM_JS;IOS;LINUX;OSX;WINDOWS;ORBIS")
+    foreach(P ${PLATFORMS})
+        if(ARG_${P})
+            if(PLATFORM)
+                message(SEND_ERROR "Call to _bn_shaderc_parse() cannot have both flags ${PLATFORM} and ${P}.")
+                return()
+            endif()
+            set(PLATFORM "${P}")
+        endif()
+    endforeach()
+    if(PLATFORM STREQUAL "")
+        message(SEND_ERROR "Call to _bn_shaderc_parse() must have a platform flag: ${PLATFORMS}")
+        return()
+    elseif(PLATFORM STREQUAL "ANDROID")
+        list(APPEND CLI "--platform" "android")
+    elseif(PLATFORM STREQUAL "ASM_JS")
+        list(APPEND CLI "--platform" "asm.js")
+    elseif(PLATFORM STREQUAL "IOS")
+        list(APPEND CLI "--platform" "ios")
+    elseif(PLATFORM STREQUAL "OSX")
+        list(APPEND CLI "--platform" "osx")
+    elseif(PLATFORM STREQUAL "LINUX")
+        list(APPEND CLI "--platform" "linux")
+    elseif(PLATFORM STREQUAL "WINDOWS")
+        list(APPEND CLI "--platform" "windows")
+    elseif(PLATFORM STREQUAL "ORBIS")
+        list(APPEND CLI "--platform" "orbis")
+    endif()
+
+    # --preprocess
+    if(ARG_PREPROCESS)
+        list(APPEND CLI "--preprocess")
+    endif()
+
+    # --define
+    if(ARG_DEFINES)
+        list(APPEND CLI "--defines")
+        set(DEFINES "")
+        foreach(DEFINE ${ARG_DEFINES})
+            if(NOT "${DEFINES}" STREQUAL "")
+                set(DEFINES "${DEFINES}\\\\;${DEFINE}")
+            else()
+                set(DEFINES "${DEFINE}")
+            endif()
+        endforeach()
+        list(APPEND CLI "${DEFINES}")
+    endif()
+
+    # --raw
+    if(ARG_RAW)
+        list(APPEND CLI "--raw")
+    endif()
+
+    # --type
+    set(TYPE "")
+    set(TYPES "FRAGMENT;VERTEX;COMPUTE")
+    foreach(T ${TYPES})
+        if(ARG_${T})
+            if(TYPE)
+                message(SEND_ERROR "Call to _bn_shaderc_parse() cannot have both flags ${TYPE} and ${T}.")
+                return()
+            endif()
+            set(TYPE "${T}")
+        endif()
+    endforeach()
+    if("${TYPE}" STREQUAL "")
+        message(SEND_ERROR "Call to _bn_shaderc_parse() must have a type flag: ${TYPES}")
+        return()
+    elseif("${TYPE}" STREQUAL "FRAGMENT")
+        list(APPEND CLI "--type" "fragment")
+    elseif("${TYPE}" STREQUAL "VERTEX")
+        list(APPEND CLI "--type" "vertex")
+    elseif("${TYPE}" STREQUAL "COMPUTE")
+        list(APPEND CLI "--type" "compute")
+    endif()
+
+    # --varyingdef
+    if(ARG_VARYINGDEF)
+        list(APPEND CLI "--varyingdef" "${ARG_VARYINGDEF}")
+    endif()
+
+    # --verbose
+    if(ARG_VERBOSE)
+        list(APPEND CLI "--verbose")
+    endif()
+
+    # --debug
+    if(ARG_DEBUG)
+        list(APPEND CLI "--debug")
+    endif()
+
+    # --disasm
+    if(ARG_DISASM)
+        list(APPEND CLI "--disasm")
+    endif()
+
+    # --profile
+    if(ARG_PROFILE)
+        list(APPEND CLI "--profile" "${ARG_PROFILE}")
+    else()
+        message(SEND_ERROR "Call to _bn_shaderc_parse() must have a shader profile.")
+    endif()
+
+    # -O
+    if(ARG_O)
+        list(APPEND CLI "-O" "${ARG_O}")
+    endif()
+
+    # --Werror
+    if(ARG_WERROR)
+        list(APPEND CLI "--Werror")
+    endif()
+
+    set(${ARG_OUT} ${CLI} PARENT_SCOPE)
+endfunction()
 
 function(add_bgfx_shader FILE FOLDER)
     get_filename_component(FILENAME "${FILE}" NAME_WE)
@@ -21,7 +199,7 @@ function(add_bgfx_shader FILE FOLDER)
         if(WIN32)
             set(DX11_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/dx11/${FILENAME}.h)
             if(NOT "${TYPE}" STREQUAL "COMPUTE")
-                _bgfx_shaderc_parse(
+                _bn_shaderc_parse(
                     DX11 ${COMMON} WINDOWS
                     PROFILE s_5_0
                     O 3
@@ -29,7 +207,7 @@ function(add_bgfx_shader FILE FOLDER)
                     BIN2C "${FILENAME}_dx11"
                 )
             else()
-                _bgfx_shaderc_parse(
+                _bn_shaderc_parse(
                     DX11 ${COMMON} WINDOWS
                     PROFILE s_5_0
                     O 1
@@ -43,14 +221,14 @@ function(add_bgfx_shader FILE FOLDER)
         
         # metal
         set(METAL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/metal/${FILENAME}.h)
-        _bgfx_shaderc_parse(METAL ${COMMON} OSX PROFILE metal OUTPUT ${METAL_OUTPUT} BIN2C "${FILENAME}_mtl")
+        _bn_shaderc_parse(METAL ${COMMON} OSX PROFILE metal OUTPUT ${METAL_OUTPUT} BIN2C "${FILENAME}_mtl")
         list(APPEND OUTPUTS "METAL")
         set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}Metal, ")
 
         # essl
         if(NOT "${TYPE}" STREQUAL "COMPUTE")
             set(ESSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/essl/${FILENAME}.h)
-            _bgfx_shaderc_parse(ESSL ${COMMON} ANDROID PROFILE 100_es OUTPUT ${ESSL_OUTPUT} BIN2C "${FILENAME}_essl")
+            _bn_shaderc_parse(ESSL ${COMMON} ANDROID PROFILE 100_es OUTPUT ${ESSL_OUTPUT} BIN2C "${FILENAME}_essl")
             list(APPEND OUTPUTS "ESSL")
             set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}ESSL, ")
         endif()
@@ -58,9 +236,9 @@ function(add_bgfx_shader FILE FOLDER)
         # glsl
         set(GLSL_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/glsl/${FILENAME}.h)
         if(NOT "${TYPE}" STREQUAL "COMPUTE")
-            _bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 140 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
+            _bn_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 140 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
         else()
-            _bgfx_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 430 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
+            _bn_shaderc_parse(GLSL ${COMMON} LINUX PROFILE 430 OUTPUT ${GLSL_OUTPUT} BIN2C "${FILENAME}_glsl")
         endif()
         list(APPEND OUTPUTS "GLSL")
         set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}GLSL, ")
@@ -68,7 +246,7 @@ function(add_bgfx_shader FILE FOLDER)
         # spirv
         if(NOT "${TYPE}" STREQUAL "COMPUTE")
             set(SPIRV_OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/Source/Shaders/spirv/${FILENAME}.h)
-            _bgfx_shaderc_parse(SPIRV ${COMMON} LINUX PROFILE spirv OUTPUT ${SPIRV_OUTPUT} BIN2C "${FILENAME}_spv")
+            _bn_shaderc_parse(SPIRV ${COMMON} LINUX PROFILE spirv OUTPUT ${SPIRV_OUTPUT} BIN2C "${FILENAME}_spv")
             list(APPEND OUTPUTS "SPIRV")
             set(OUTPUTS_PRETTY "${OUTPUTS_PRETTY}SPIRV")
             set(OUTPUT_FILES "")
@@ -77,7 +255,7 @@ function(add_bgfx_shader FILE FOLDER)
 
         foreach(OUT ${OUTPUTS})
             list(APPEND OUTPUT_FILES ${${OUT}_OUTPUT})
-            list(APPEND COMMANDS COMMAND "bgfx::shaderc" ${${OUT}})
+            list(APPEND COMMANDS COMMAND ${SHADERC_PATH} ${${OUT}})
             get_filename_component(OUT_DIR ${${OUT}_OUTPUT} DIRECTORY)
             file(MAKE_DIRECTORY ${OUT_DIR})
         endforeach()
@@ -89,6 +267,8 @@ function(add_bgfx_shader FILE FOLDER)
         )
     endif()
 endfunction()
+
+set(SHADERC_PATH "" CACHE FILEPATH "Optional full path to shaderc built from bgfx.")
 
 set(SOURCES
     "Include/Babylon/Polyfills/Canvas.h"
@@ -140,13 +320,21 @@ target_link_libraries(Canvas
     PRIVATE UrlLib
     PRIVATE base-n)
 
-if(BGFX_BUILD_TOOLS AND BGFX_BUILD_TOOLS_SHADER)
+
+if(SHADERC_PATH)
+    if(EXISTS "${SHADERC_PATH}")
+        message(STATUS "Using shaderc from: ${SHADERC_PATH}")
+    else()
+        message(FATAL_ERROR " '${SHADERC_PATH}' does not exist.")
+    endif()
+
     if(NOT IOS AND NOT VISIONOS AND NOT ANDROID)
         foreach(SHADER ${SHADERS})
             add_bgfx_shader(${SHADER} "")
         endforeach()
     endif()
-    add_dependencies(Canvas shaderc)
+else()
+    message(STATUS "No SHADERC_PATH provided — Shaderc will not be used.")
 endif()
 
 set_property(TARGET Canvas PROPERTY FOLDER Polyfills)
