--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -4,6 +4,7 @@ parameters:
   CC: ''
   CXX: ''
   JSEngine: ''
+  Sanitizers: false
 
 jobs:
   - job: ${{ parameters.name }}
@@ -12,6 +13,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
+      SANITIZER_FLAG: ${{ parameters.Sanitizers && 'ON' || 'OFF' }}
       CC: ${{ parameters.CC }}
       CXX: ${{ parameters.CXX }}
   
@@ -26,7 +28,7 @@ jobs:
       displayName: 'Install packages'
 
     - script: |
-        cmake -G Ninja -B build -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{ parameters.JSEngine }} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Ninja -B build -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{ parameters.JSEngine }} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG) .
         ninja -C build
       displayName: 'Build X11'
     
