--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -7,7 +7,10 @@ jobs:
     timeoutInMinutes: 30
     pool:
       vmImage: ${{ parameters.vmImage }}
-  
+
+    variables:
+      SANITIZER_FLAG: ${{ parameters.Sanitizers && 'ON' || 'OFF' }}
+
     steps:
     - template: cmake.yml
       parameters:
@@ -18,7 +21,7 @@ jobs:
       displayName: 'Select XCode $(XCODE_VERSION)'
 
     - script: |
-        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
+        cmake -G Xcode -B buildmacOS -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
       displayName: 'Generate macOS solution'
 
     - script: |
