--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -13,7 +13,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
-      SANITIZER_FLAG: ${{ if eq(parameters.Sanitizers, true) }}'ON'${{ else }}'OFF'${{ endif }}
+      SANITIZER_FLAG: $[coalesce(replace(format('{0}', parameters.Sanitizers), 'True', 'ON'), 'OFF')]
       CC: ${{ parameters.CC }}
       CXX: ${{ parameters.CXX }}
   
