--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -9,7 +9,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
-      SANITIZER_FLAG: ${{ if eq(parameters.Sanitizers, true) }}'ON'${{ else }}'OFF'${{ endif }}
+      SANITIZER_FLAG: $[coalesce(replace(format('{0}', parameters.Sanitizers), 'True', 'ON'), 'OFF')]
 
     steps:
     - template: cmake.yml
