sanitizers for unittests android

--- a/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
@@ -5,6 +5,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(UnitTestsJNI)
 
+if(ENABLE_SANITIZERS)
+    set(ENABLE_RTTI ON CACHE BOOL "" FORCE)
+    set(SANITIZERS "address,undefined")
+    add_compile_options(-fsanitize=${SANITIZERS} -fno-omit-frame-pointer)
+    add_link_options(-fsanitize=${SANITIZERS})
+endif()
+
 get_filename_component(UNIT_TESTS_DIR "${CMAKE_CURRENT_LIST_DIR}/../../../../.." ABSOLUTE)
 get_filename_component(APPS_DIR "${UNIT_TESTS_DIR}/.." ABSOLUTE)
 get_filename_component(REPO_ROOT_DIR "${APPS_DIR}/.." ABSOLUTE)
