--- a/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
@@ -35,6 +35,7 @@ target_link_libraries(UnitTestsJNI
     PRIVATE GraphicsDevice
     PRIVATE NativeCamera
     PRIVATE NativeEngine
+    PRIVATE DataStream
     PRIVATE NativeInput
     PRIVATE NativeOptimizations
     PRIVATE NativeEncoding
