--- a/Plugins/CMakeLists.txt
+++ b/Plugins/CMakeLists.txt
@@ -37,3 +37,7 @@ endif()
 if(BABYLON_NATIVE_PLUGIN_NATIVEENCODING)
     add_subdirectory(NativeEncoding)
 endif()
+
+if(BABYLON_NATIVE_PLUGIN_DATASTREAM)
+    add_subdirectory(DataStream)
+endif()
