--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -11,4 +11,4 @@ if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS AND NOT VISIONOS) OR (UNI
     add_subdirectory(UnitTests)
 endif()
 
-#npm(install --silent --yes)
+npm(install --silent --yes)
