--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -249,5 +249,5 @@ if(BABYLON_NATIVE_PLUGIN_DATASTREAM)
     set(LIBDEFLATE_BUILD_SHARED_LIB OFF)
     set(LIBDEFLATE_COMPRESSION_SUPPORT OFF)
     FetchContent_MakeAvailable_With_Message(libdeflate)
-    set_property(TARGET libdeflate PROPERTY UNITY_BUILD false)
+    set_property(TARGET libdeflate_static PROPERTY UNITY_BUILD false)
 endif()
