--- a/Plugins/NativeEncoding/CMakeLists.txt
+++ b/Plugins/NativeEncoding/CMakeLists.txt
@@ -12,7 +12,8 @@ target_link_libraries(NativeEncoding
     PUBLIC napi
     PRIVATE GraphicsDevice
     PRIVATE GraphicsDeviceContext
-    PRIVATE JsRuntimeInternal)
+    PRIVATE JsRuntimeInternal
+    PRIVATE Blob)
 
 set_property(TARGET NativeEncoding PROPERTY FOLDER Plugins)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
