--- a/Apps/package.json
+++ b/Apps/package.json
@@ -14,6 +14,7 @@
     "babylonjs-gui": "^8.28.2",
     "babylonjs-loaders": "^8.28.2",
     "babylonjs-materials": "^8.28.2",
+    "babylonjs-serializers": "^8.28.2",
     "jsc-android": "^241213.1.0",
     "v8-android": "^7.8.2"
   }
