--- a/Apps/UnitTests/CMakeLists.txt
+++ b/Apps/UnitTests/CMakeLists.txt
@@ -32,6 +32,7 @@ set_property(TARGET UnitTests PROPERTY UNITY_BUILD false)
 
 target_link_libraries(UnitTests
     PRIVATE AppRuntime
+    PRIVATE Blob
     PRIVATE Canvas
     PRIVATE Console
     PRIVATE GraphicsDevice
