Playground: Upgrade BJS and add glTF serializer (#1565)
This PR adds a quick test for the glTF serializer in the Playground,
updating BJS along the way.

- Upgrade BJS to latest (8.36.1)
- Fix installation test failure introduced in #1564
- Add the Blob polyfill, NativeEncoding plugin, and
babylonjs-serializers package throughout the Playground app
- Port a visualization test for the glTF serializer from BJS
- Note: I would port over more, but the rest happen to use the File API,
which is not yet supported in Native.

---------

Co-authored-by: Demi <213505693+Debugmi@users.noreply.github.com>

--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -89,6 +89,11 @@
             "referenceImage": "glTFSheen.png"
         },
         {
+            "title": "GLTF Serializer multimaterial with raw texture",
+            "playgroundId": "#KU72PX",
+            "referenceImage": "glTFSerializerMultimaterial.png"
+        },
+        {
             "title": "GLTF Extension KHR_materials_specular",
             "playgroundId": "#RNT7K4#9",
             "referenceImage": "gltfExtensionKhrMaterialsSpecular.png"
