--- a/Apps/package.json
+++ b/Apps/package.json
@@ -9,11 +9,12 @@
     "getNightly": "node scripts/getNightly.js"
   },
   "dependencies": {
-    "babylonjs": "^8.28.2",
-    "babylonjs-gltf2interface": "^8.28.2",
-    "babylonjs-gui": "^8.28.2",
-    "babylonjs-loaders": "^8.28.2",
-    "babylonjs-materials": "^8.28.2",
+    "babylonjs": "^8.36.1",
+    "babylonjs-gltf2interface": "^8.36.1",
+    "babylonjs-gui": "^8.36.1",
+    "babylonjs-loaders": "^8.36.1",
+    "babylonjs-materials": "^8.36.1",
+    "babylonjs-serializers": "^8.36.1",
     "jsc-android": "^241213.1.0",
     "v8-android": "^7.8.2"
   }
