removed perf test

--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -4,7 +4,7 @@ parameters:
   CC: ''
   CXX: ''
   JSEngine: ''
-  Sanitizers: false
+  enableSanitizers: false
 
 jobs:
   - job: ${{ parameters.name }}
@@ -13,7 +13,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
-      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.Sanitizers), 'True', 'ON'), 'OFF') }}
+      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
       CC: ${{ parameters.CC }}
       CXX: ${{ parameters.CXX }}
   
@@ -24,7 +24,7 @@ jobs:
 
     - script: |
         sudo apt-get update
-        sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev
+        sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev clang
       displayName: 'Install packages'
 
     - script: |
