--- a/.github/jobs/macos.yml
+++ b/.github/jobs/macos.yml
@@ -1,6 +1,7 @@
 parameters:
   name: ''
   vmImage: ''
+  enableSanitizers: false
 
 jobs:
   - job: ${{ parameters.name }}
@@ -9,7 +10,7 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
 
     variables:
-      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.Sanitizers), 'True', 'ON'), 'OFF') }}
+      SANITIZER_FLAG: ${{ coalesce(replace(format('{0}', parameters.enableSanitizers), 'True', 'ON'), 'OFF') }}
 
     steps:
     - template: cmake.yml
