Rework NativeTracing to be on top of PerfTrace

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -132,6 +132,7 @@ target_link_libraries(Playground
     PRIVATE Console
     PRIVATE ExternalTexture
     PRIVATE GraphicsDevice
+    PRIVATE NativeTracing
     PRIVATE NativeCapture
     PRIVATE NativeEncoding
     PRIVATE NativeEngine
