--- a/Apps/UnitTests/package.json
+++ b/Apps/UnitTests/package.json
@@ -12,7 +12,7 @@
     "@babylonjs/gui": "^8.37.0",
     "@babylonjs/loaders": "^8.37.0",
     "@babylonjs/materials": "^8.37.0",
-    "babylonjs-serializers": "^8.37.0",
+    "@babylonjs/serializers": "^8.37.0",
     "chai": "^5.2.0",
     "jsc-android": "^241213.1.0",
     "mocha": "^11.1.0",
